Basic functionality for retrieving data from News API using MVVM design pattern (webservice, repo, viewmodel)

--- a/app/src/main/res/values/secrets.xml
+++ b/app/src/main/res/values/secrets.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="secret">secrejnjn</string>
+    <string name="news_api_key">a020c9f94c0942dba82dd51a7ed3d790</string>
 </resources>
