--- a/app/src/main/res/layout/fragment_everything_page.xml
+++ b/app/src/main/res/layout/fragment_everything_page.xml
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".view.fragments.EverythingPageFragment">
-
-    <TextView style="?android:textAppearanceMedium"
-
-        android:id="@+id/textviewevery"
-        android:padding="16dp"
-        android:lineSpacingMultiplier="1.2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-
-</FrameLayout>
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/every_news_recycler_view"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
