--- a/app/src/main/res/layout/fragment_top_headlines_page.xml
+++ b/app/src/main/res/layout/fragment_top_headlines_page.xml
@@ -1,14 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/content"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
-    <TextView style="?android:textAppearanceMedium"
-
-        android:id="@+id/textviewtop"
-        android:padding="16dp"
-        android:lineSpacingMultiplier="1.2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-</ScrollView>
+<androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/top_news_recycler_view"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
