--- a/app/src/main/res/layout/fragment_everything_page.xml
+++ b/app/src/main/res/layout/fragment_everything_page.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/every_news_recycler_view"
-    android:layout_width="0dp"
-    android:layout_height="0dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
