--- a/app/src/main/res/layout/recyclerview_article.xml
+++ b/app/src/main/res/layout/recyclerview_article.xml
@@ -5,21 +5,19 @@
     android:padding="15dp"
     android:layout_marginBottom="10dp">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/top_id"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/articletitle_every_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/articletitle_every_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
-        <TextView
-            android:id="@+id/articleauthor_every_textview"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
+    <TextView
+        android:id="@+id/articleauthor_every_textview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
