--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <FrameLayout
+        android:id="@+id/filter_placeholder"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:translationZ="10dp">
+    </FrameLayout>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -19,76 +28,85 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
+
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
+                android:layout_height="match_parent"
                 app:contentInsetStart="0dp"
-                android:background="?attr/colorPrimary"
-                app:layout_scrollFlags="scroll|enterAlways">
+                app:layout_collapseMode="pin"
+                android:background="?attr/colorPrimary">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal">
 
-                    <ImageButton
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:src="@drawable/ic_filter_list_black_24dp" />
+                        <ImageButton
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight="1"
+                            android:background="@null"
+                            android:onClick="openFilterArticle"
+                            android:src="@drawable/ic_filter_list_black_24dp" />
 
-                    <EditText
-                        android:visibility="gone"
-                        android:id="@+id/search_bar"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:layout_weight="5"
-                        android:hint="@string/search"
-                        android:inputType="text"
-                        tools:ignore="LabelFor"
-                        android:importantForAutofill="no"
-                        android:imeOptions="actionSearch"/>
-                    <TextView
-                        android:id="@+id/title_bar"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="center"
-                        android:gravity="center"
-                        android:textSize="20sp"
-                        android:textStyle="bold"
-                        android:text="@string/headlines"
-                        android:layout_weight="5" />
-                    <ImageButton
-                        android:id="@+id/search_button"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_search_black_24dp"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:onClick="searchArticle"/>
-                    <ImageButton
-                        android:id="@+id/close_button"
-                        android:visibility="gone"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:src="@drawable/ic_close_black_24dp"
-                        android:layout_weight="1"
-                        android:background="@null"
-                        android:onClick="stopSearchingArticle"/>
+                        <EditText
+                            android:visibility="gone"
+                            android:id="@+id/search_bar"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:layout_weight="5"
+                            android:hint="@string/search"
+                            android:inputType="text"
+                            tools:ignore="LabelFor"
+                            android:importantForAutofill="no"
+                            android:imeOptions="actionSearch"/>
+                        <TextView
+                            android:id="@+id/title_bar"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_gravity="center"
+                            android:gravity="center"
+                            android:textSize="20sp"
+                            android:textStyle="bold"
+                            android:text="@string/headlines"
+                            android:layout_weight="5" />
+                        <ImageButton
+                            android:id="@+id/search_button"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_search_black_24dp"
+                            android:layout_weight="1"
+                            android:background="@null"
+                            android:onClick="searchArticle"/>
+                        <ImageButton
+                            android:id="@+id/close_button"
+                            android:visibility="gone"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:src="@drawable/ic_close_black_24dp"
+                            android:layout_weight="1"
+                            android:background="@null"
+                            android:onClick="stopSearchingArticle"/>
 
-                </LinearLayout>
+                    </LinearLayout>
 
-            </androidx.appcompat.widget.Toolbar>
+                </androidx.appcompat.widget.Toolbar>
+
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
