RecyclerView ItemView (complete)

--- a/app/src/main/res/layout/recyclerview_article.xml
+++ b/app/src/main/res/layout/recyclerview_article.xml
@@ -1,22 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:padding="15dp">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    card_view:cardCornerRadius="20dp"
+    android:layout_marginBottom="20dp">
+    <LinearLayout
+        android:orientation="vertical" android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp">
 
-    <TextView
-        android:id="@+id/top_id"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+<!--        <TextView-->
+<!--            android:id="@+id/top_id"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"/>-->
 
-    <TextView
-        android:id="@+id/articletitle_every_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/articlepublishedat_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/articleauthor_every_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/articletitle_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/articleimage_textview"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="10dp"/>
+
+        <TextView
+            android:id="@+id/articledescription_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="17sp"/>
+
+        <TextView
+            android:id="@+id/articlecontent_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="17sp"/>
+
+        <TextView
+            android:id="@+id/readmore_textview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorPrimaryDark"
+            android:text="@string/read_more"
+            android:textAlignment="viewEnd"/>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
