--- a/app/src/main/res/layout/recyclerview_article.xml
+++ b/app/src/main/res/layout/recyclerview_article.xml
@@ -6,7 +6,8 @@
     card_view:cardCornerRadius="20dp"
     android:layout_marginBottom="20dp">
     <LinearLayout
-        android:orientation="vertical" android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="15dp">
 
