--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,7 @@
   <color name="colorPrimaryDark">#00574B</color>
   <color name="colorAccent">#D81B60</color>
   <color name="colorGrey">#D3D3D3</color>
+  <color name="colorDarkerGrey">#7b7b7b</color>
   <color name="colorWhite">#FFFFFF</color>
+  <color name="colorBlack">#000000</color>
 </resources>
